finished drafting meta data updater

--- a/Testing/ReadFromMongo.ipynb
+++ b/Testing/ReadFromMongo.ipynb
@@ -2,23 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".env Loaded: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "from pathlib import Path\n",
     "import requests\n",
-    "import pymongo\n",
-    "import json, os, subprocess, datetime\n",
+    "from datetime import datetime, timezone, timedelta\n",
+    "from pymongo import MongoClient\n",
+    "from bson.objectid import ObjectId\n",
+    "import json, os, subprocess\n",
     "\n",
     "env_path = Path('\\\\\\\\SUSMANSERVER\\\\Active Server Drive\\\\HomeAutomation') / '.env'\n",
     "print(f'.env Loaded: {load_dotenv(dotenv_path=env_path)}')"
@@ -26,52 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "myclient = pymongo.MongoClient(\"mongodb://susmanserver:27017/\")\n",
-    "mydb = myclient[\"Google_Nest\"]\n",
-    "mycol = mydb[\"PubSub_Events\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "581"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pubsub_data = mydb.get_collection(\"PubSub_Events\")\n",
-    "pubsub_data.count_documents({})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_id': ObjectId('5fcc154d6c37f9ac42d8c361'), 'eventId': '1204ca79-d695-45e9-974f-654f2d723212', 'timestamp': '2020-12-05T23:18:35.777Z', 'resourceUpdate': {'name': 'enterprises/a26b53d9-1ef1-4dcb-957a-27c9318ebf75/devices/AVPHwEv_vYDtYJ-bArGsF7PYvIU97x_JRKVfo9Sb3jwD5ulk7P40sLl6QmwWCjtkRYG_9U43OxpnXpIifDJTk5XAJ8-2Kg', 'events': {'sdm_devices_events_CameraMotion_Motion': {'eventSessionId': 'AVPHwEuLhiD4ggUOPSDQhH75psJfHAdzEIrlJluTeW9VW9CgLJTgk5OcOrJ3MRcQkms4jz3PrWgPUpVe-nCUNVh387pDPA', 'eventId': 'CiQA2vuxrxeYvloDwvloGldZM7romFBqdCTf-Sbrj-e94fM0BngSwAEATD4Xp7gJ4CKi1mUWhHXs8H29F9owzMSfxo5IpALoALrlH17qx4LUXGM_K2NPlHRFNbdEGnVtz29oFZwLkX_nr73wY_wR5dN9hnnXcmDbjpp071165DuIoKuRnpSh5bYUcBdl-EZejYJfEFAZawD1m0XB3siu0buN7eSqwrWjdSWAJX-a4LBU1wMRqqkaRIrh7XL3lGiGZqJ6xll-3faF_hvhyoJBPKbfq6D-yErCtvu4ODwtfEOpKsZ4eCeTsqA'}}}, 'userId': 'AVPHwEtzfFWzTEEswb9UsdAsf3V6ZpYF1vDkbXtkWYvb'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "results = pubsub_data.find().sort('timestamp', -1)\n",
-    "print(results[0])"
+    "db_name = 'OAuth2_Manager'\n",
+    "collection_name = 'Active_OAuth2'\n",
+    "my_client = MongoClient('mongodb://susmanserver:27017',\n",
+    "                        username=os.getenv(\"OAuth2_Manager_Username\"),\n",
+    "                        password=os.getenv(\"OAuth2_Manager_Password\"),\n",
+    "                        authSource=db_name,\n",
+    "                        authMechanism='SCRAM-SHA-256')\n",
+    "my_db = my_client[db_name]\n",
+    "my_col = my_db[collection_name]"
    ]
   },
   {
@@ -79,7 +40,68 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "token = my_col.find({'_id':ObjectId('5fd61e859532201850007cdf')})[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = f'https://smartdevicemanagement.googleapis.com/v1/enterprises/{os.getenv(\"Google_Nest_Prodect_ID\")}/devices'\n",
+    "headers = {'Content-Type': 'application/json', 'Authorization': f'Bearer {token[\"access_token\"]}'}\n",
+    "response = requests.get(url=url,headers=headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name_type_dict = {}\n",
+    "response_json = json.loads(response.text)\n",
+    "for device in response_json['devices']:\n",
+    "    name_type_dict[device['name']] = device['type'].replace('.','_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_client = MongoClient('mongodb://susmanserver:27017',\n",
+    "                        username=os.getenv(\"Google_Nest_Username\"),\n",
+    "                        password=os.getenv(\"Google_Nest_Password\"),\n",
+    "                        authSource='Google_Nest',\n",
+    "                        authMechanism='SCRAM-SHA-256')\n",
+    "my_db = my_client[\"Google_Nest\"]\n",
+    "my_col = my_db[\"PubSub_Events\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "missing_type_records = my_col.find({\"resourceUpdate.type\": {'$exists': False}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for record in missing_type_records:\n",
+    "    my_query = {'_id': record['_id']}\n",
+    "    new_values = {\"$set\": {\"resourceUpdate.type\": name_type_dict[record['resourceUpdate']['name']]}}\n",
+    "    my_col.update_one(my_query, new_values)"
+   ]
   },
   {
    "cell_type": "code",
