pull down images

--- a/Testing/ReadFromMongo.ipynb
+++ b/Testing/ReadFromMongo.ipynb
@@ -88,7 +88,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "missing_type_records = my_col.find({\"resourceUpdate.type\": {'$exists': False}})"
+    "missing_type_records = my_col.find({\"resourceUpdate.type\": {'$exists': True}}).sort('timestamp',-1)\n",
+    "missing_type_records[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deviceID = missing_type_records[0]['resourceUpdate']['name']\n",
+    "eventID = missing_type_records[0]['resourceUpdate']['events']['sdm_devices_events_CameraSound_Sound']['eventId']\n",
+    "print(deviceID)\n",
+    "print(eventID)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = f'https://smartdevicemanagement.googleapis.com/v1/{deviceID}:executeCommand'\n",
+    "headers = {'Content-Type': 'application/json', 'Authorization': f'Bearer {token[\"access_token\"]}'}\n",
+    "data = {\"command\" : \"sdm.devices.commands.CameraEventImage.GenerateImage\",\"params\" : {\"eventId\" : eventID}}\n",
+    "response = requests.post(url=url,headers=headers,data=json.dumps(data))\n",
+    "print(response.text)"
    ]
   },
   {
